--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignupActivity"></activity>
         <activity android:name=".newpost"></activity>
         <activity android:name=".logintitle">
             <intent-filter>
@@ -21,6 +20,8 @@
         </activity>
         <activity android:name=".MainActivity">
         </activity>
+        <activity android:name=".ChatBoardActivity"></activity>
+        <activity android:name=".IdeamainActivity"></activity>
     </application>
 
 </manifest>
