파이어베이스의 인증과 FireStore 연결 후 로그인 기능 완성. 기존에 로그인 했으면 바로 Main으로 넘어감 내정보 앱에 내가 등록한 정보가 나옴 뒤로가기 두번 누를 시 앱 종료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".ChatBoardActivity"></activity>
         <activity android:name=".IdeamainActivity"></activity>
+        <activity android:name=".InfomationActivity"></activity>
     </application>
 
 </manifest>
