--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.capstonewansook.ideaboard">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,20 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CleverIdeaBoard"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".CleverIdeaBoard" />
         <activity android:name=".newpost" />
-
         <activity android:name=".logintitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".ChatBoardActivity"></activity>
-        <activity android:name=".IdeamainActivity"></activity>
-        <activity android:name=".InfomationActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ChatBoardActivity" />
+        <activity android:name=".IdeamainActivity" />
+        <activity android:name=".InfomationActivity" />
     </application>
 
 </manifest>
