--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".ProfileUpdateActivity"></activity>
+        <activity android:name=".SignUpActivity" />
         <activity android:name=".CleverIdeaBoard" />
         <activity android:name=".newpost" />
         <activity android:name=".logintitle">
@@ -21,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".ChatBoardActivity" />
         <activity android:name=".IdeamainActivity" />
         <activity android:name=".InfomationActivity" />
