--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 }
