--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ChatBoardActivity" />
         <activity android:name=".IdeamainActivity" />
         <activity android:name=".InfomationActivity" />
+        <activity android:name=".Chatalbum" />
     </application>
 
 </manifest>
