--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileUpdateActivity"></activity>
+        <activity android:name=".Zample"></activity>
+        <activity android:name=".ProfileUpdateActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".CleverIdeaBoard" />
         <activity android:name=".newpost" />
