--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.capstonewansook.ideaboard">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Zample">
-
-        </activity>
+        <activity android:name=".Zample" />
         <activity android:name=".ProfileUpdateActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".CleverIdeaBoard" />
