다운로드 중복 방지(이미지 파일은 잘 보이지만 다른 파일은 안보임)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,15 @@
         <activity android:name=".IdeamainActivity" />
         <activity android:name=".InfomationActivity" />
         <activity android:name=".Chatalbum" />
+        <provider
+            android:authorities="${applicationId}.provider"
+            android:name=".GenericFileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 
 </manifest>
